--- a/1_million_house.ipynb
+++ b/1_million_house.ipynb
@@ -6,7 +6,7 @@
       "name": "1 million house.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNndGA0f6L8F8W0YcNFrVAu",
+      "authorship_tag": "ABX9TyM5dIKS9nTiZgH5bXye/WlW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import pandas as pd\n",
         "import numpy as np\n"
       ],
-      "execution_count": 278,
+      "execution_count": 316,
       "outputs": []
     },
     {
@@ -63,13 +63,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a1SvosGz0JsY",
-        "outputId": "a3e6318a-48bc-40ea-e4ce-20d2a960dbc1"
+        "outputId": "c1e4d2a3-0c98-43d9-8e45-d0d5996c992a"
       },
       "source": [
         "df_listings=pd.read_json('melbourne_listing.json')\n",
         "df_listings.shape"
       ],
-      "execution_count": 279,
+      "execution_count": 317,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,7 +79,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 279
+          "execution_count": 317
         }
       ]
     },
@@ -91,13 +91,13 @@
           "height": 419
         },
         "id": "kRx-ketL1Fcx",
-        "outputId": "71db47cf-e368-4b43-d0af-a7cde878f0dc"
+        "outputId": "8e94f121-3af4-4d78-cad4-1611d250611c"
       },
       "source": [
         "df_listings=df_listings[['suburb','propertyType','bedrooms','bathrooms','carspaces','price']]\n",
         "df_listings"
       ],
-      "execution_count": 280,
+      "execution_count": 318,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +252,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 280
+          "execution_count": 318
         }
       ]
     },
@@ -263,12 +263,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i6Z_e-QZ0jIk",
-        "outputId": "cc6eb85c-427f-4593-e156-45016d576a6f"
+        "outputId": "9aec0b91-36ad-4ebb-b9da-46545a3758ff"
       },
       "source": [
         "df_listings.isna().sum()"
       ],
-      "execution_count": 281,
+      "execution_count": 319,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 281
+          "execution_count": 319
         }
       ]
     },
@@ -305,7 +305,7 @@
       "source": [
         "df_listings.sort_values(by='suburb',inplace=True)"
       ],
-      "execution_count": 282,
+      "execution_count": 320,
       "outputs": []
     },
     {
@@ -316,13 +316,13 @@
           "height": 419
         },
         "id": "ni8x6SDS3UMY",
-        "outputId": "d951ef3b-bf1f-42fe-8591-d213dfc5ee08"
+        "outputId": "73f9534d-d7ba-4c21-c963-68a860289eaa"
       },
       "source": [
         "df_medians=pd.read_excel('House_Medians3rdQtr2020.xls',skiprows=1)\n",
         "df_medians"
       ],
-      "execution_count": 283,
+      "execution_count": 321,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,36 @@
             ]
           },
           "metadata": {},
-          "execution_count": 283
+          "execution_count": 321
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jEJsHS7Z9A-S",
+        "outputId": "2f23c677-c2be-44e2-b0e3-1dc82d27eb6d"
+      },
+      "source": [
+        "df_medians.columns"
+      ],
+      "execution_count": 323,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['SUBURB', 'Jul - Sep 19', 'Oct - Dec 19', 'Jan - Mar 20', 'Apr- Jun 20',\n",
+              "       'Jul - Sep 20', 'No of sales ', 'No of Sales ', 'Jul - Sep 19.1',\n",
+              "       'Apr - Jun 20'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 323
         }
       ]
     },
@@ -541,154 +570,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9qsX1kuJ3qve",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "0083c324-a543-4987-b209-746fce8826db"
+        "id": "9qsX1kuJ3qve"
       },
       "source": [
-        "df_medians=df_medians[['SUBURB','Jul - Sep 20']]\n",
-        "df_medians"
+        "df_medians.drop(columns=[ 'Jul - Sep 19', 'Oct - Dec 19', 'Jan - Mar 20', 'Apr- Jun 20',\n",
+        "        'No of sales ', 'No of Sales ', 'Jul - Sep 19.1',\n",
+        "       'Apr - Jun 20'], inplace=True)"
       ],
-      "execution_count": 284,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>SUBURB</th>\n",
-              "      <th>Jul - Sep 20</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>ABBOTSFORD</td>\n",
-              "      <td>1260000.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>ABERFELDIE</td>\n",
-              "      <td>1600000.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>AINTREE</td>\n",
-              "      <td>740000.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>758</th>\n",
-              "      <td>YARRAM</td>\n",
-              "      <td>241000.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>759</th>\n",
-              "      <td>YARRAVILLE</td>\n",
-              "      <td>960100.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>760</th>\n",
-              "      <td>YARRAWONGA</td>\n",
-              "      <td>482500.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>761</th>\n",
-              "      <td>YEA</td>\n",
-              "      <td>495000.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>762</th>\n",
-              "      <td>YINNAR</td>\n",
-              "      <td>365000.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>763 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         SUBURB  Jul - Sep 20\n",
-              "0           NaN           NaN\n",
-              "1           NaN           NaN\n",
-              "2    ABBOTSFORD     1260000.0\n",
-              "3    ABERFELDIE     1600000.0\n",
-              "4       AINTREE      740000.0\n",
-              "..          ...           ...\n",
-              "758      YARRAM      241000.0\n",
-              "759  YARRAVILLE      960100.0\n",
-              "760  YARRAWONGA      482500.0\n",
-              "761         YEA      495000.0\n",
-              "762      YINNAR      365000.0\n",
-              "\n",
-              "[763 rows x 2 columns]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 284
-        }
-      ]
+      "execution_count": 325,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GtcLYj1ibsqa",
-        "outputId": "e4844d6c-5367-49fd-fce3-a7f6ced640c3"
+        "id": "GtcLYj1ibsqa"
       },
       "source": [
         "df_medians.dropna(inplace=True)"
       ],
-      "execution_count": 285,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ]
-        }
-      ]
+      "execution_count": 326,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -702,30 +603,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZT0DVRqU7AUu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "65967d26-bdd7-45af-c862-e07f43b8482e"
+        "id": "ZT0DVRqU7AUu"
       },
       "source": [
         "df_medians['SUBURB']=df_medians['SUBURB'].apply(lambda x:x.title())"
       ],
-      "execution_count": 286,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n"
-          ]
-        }
-      ]
+      "execution_count": 327,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -735,7 +619,7 @@
       "source": [
         "with_medianprice=df_listings.merge(df_medians,left_on='suburb',right_on='SUBURB',how='left')"
       ],
-      "execution_count": 287,
+      "execution_count": 328,
       "outputs": []
     },
     {
